assets/queries/k8s/pod_is_not_targeted_by_network_policy/test/positive_expected_result.json
[
	{
		"queryName": "Pod Is Not Targeted By NetworkPolicy",
		"severity": "MEDIUM",
		"line": 4,
    "fileName": "positive2.yaml"
	},
  {
		"queryName": "Pod Is Not Targeted By NetworkPolicy",
		"severity": "MEDIUM",
		"line": 4,
    "fileName": "positive1.yaml"
	}
]
